Bug 1095069 - Cannot copy or delete bookmarks from search results in library. r=mano